src/components/Header/styles.module.scss
.container {
  .topBar {
    display: flex;
    align-items: center;
    justify-content: center;
    background: #353535;
    min-height: 1.5rem;

    span {
      color: #fff;
      text-align: center;
      font-size: 0.75rem;
      font-style: normal;
      font-weight: 400;
      line-height: 1.125rem;
    }
  }

  .wrapper {
    background: #fff;
    box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.08);

    .content {
      width: 100%;
      max-width: 101.875rem;
      min-height: 5.5rem;
      margin: 0 auto;
      padding: 0 1rem;
      gap: 2rem;

      display: flex;
      align-items: center;
      justify-content: space-between;

      .search-container {
        background: #efefef;
        border-radius: 0.625rem;
        height: 2.5rem;
        width: 100%;
        max-width: 49.4375rem;

        display: flex;
        align-items: center;

        input {
          background: transparent;
          border: 0;
          padding: 0 1.5rem;
          height: 100%;
          width: 100%;
        }

        button {
          width: 100%;
          max-width: 7.4375rem;

          height: 100%;
          background: #faa500;

          border-radius: 0.5rem;
          border: none;

          color: #fff;
          text-align: center;

          font-size: 0.875rem;
          font-style: normal;
          font-weight: 400;
          line-height: 1.3125rem;
        }
      }

      .actions-wrapper {
        display: flex;
        gap: 2.4rem;

        a,
        button {
          color: #353535;
          font-size: 0.875rem;
          font-style: normal;
          font-weight: 400;
          line-height: 1.3125rem;
          text-decoration: none;

          display: flex;
          align-items: center;
          justify-content: center;
          gap: 0.5rem;

          transition: opacity 0.3s;

          &:hover {
            opacity: 0.7;
          }
        }

        button {
          background: transparent;
          padding: 0.75rem 0.875rem;
          border: 1px solid #faa500;
          border-radius: 0.5rem;

          transition: 0.3s;
          cursor: pointer;

          img {
            transition: 0.3s;
          }

          &:hover {
            background: #faa500;
            opacity: 1;

            color: #fff;

            img {
              filter: brightness(5);
            }
          }
        }
      }
    }
  }
}

